<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="17"
        android:background="#00000000"></LinearLayout>

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="57"
        android:background="@color/setting_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/chatroom_bg_setting_titlebar"
            android:gravity="center"
            android:text="@string/chatroom_setting"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/iv_background_setting"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/setting_item_bg"
            android:paddingLeft="15dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/chatroom_setting_background"
                android:textColor="@color/setting_item_text"
                android:textSize="12sp" />

            <ImageButton
                android:layout_width="5dp"
                android:layout_height="9dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/chatroom_right" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/setting_tv_exit_room"
                android:layout_width="174dp"
                android:layout_height="36dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/chatroom_bg_setting_exit_room"
                android:gravity="center"
                android:text="@string/chatroom_setting_exit_room"
                android:textColor="@color/text_blue_light"
                android:textSize="15dp" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>